[gd_scene load_steps=10 format=3 uid="uid://bmnp5uwdpj62a"]

[ext_resource type="Script" path="res://Scripts/settings_menu.gd" id="1_k5j3w"]
[ext_resource type="FontFile" uid="uid://bwsqjdp81vqr4" path="res://Assets/Fonts/Minecraftia-Regular.ttf" id="2_font"]
[ext_resource type="Texture2D" uid="uid://dfaedajoc15tk" path="res://Assets/Sprites/UIElements/button_dialogue_option_disabled.png" id="3_disabled"]
[ext_resource type="Texture2D" uid="uid://dfxtodpi20udb" path="res://Assets/Sprites/UIElements/button_dialogue_option_hover.png" id="4_hover"]
[ext_resource type="Texture2D" uid="uid://dnao5kkpsegta" path="res://Assets/Sprites/UIElements/button_dialogue_option_pressed.png" id="5_pressed"]
[ext_resource type="Texture2D" uid="uid://df8nud72s0g8v" path="res://Assets/Sprites/UIElements/button_dialogue_option.png" id="6_normal"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_focus"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_disabled"]
texture = ExtResource("3_disabled")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hover"]
texture = ExtResource("4_hover")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pressed"]
texture = ExtResource("5_pressed")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_normal"]
texture = ExtResource("6_normal")

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_k5j3w")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.8)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
theme_override_styles/panel = SubResource("StyleBoxTexture_normal")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Ustawienia"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.113725, 0.027451, 0.184314, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 48
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="MusicContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MusicLabel" type="Label" parent="Panel/VBoxContainer/MusicContainer"]
layout_mode = 2
text = "Muzyka: 70%"
custom_minimum_size = Vector2(200, 0)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.113725, 0.027451, 0.184314, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 24
vertical_alignment = 1

[node name="MusicSlider" type="HSlider" parent="Panel/VBoxContainer/MusicContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_colors/grabber_disabled = Color(0.5, 0.5, 0.5, 1)
theme_override_colors/grabber_highlight = Color(1, 1, 1, 1)
theme_override_colors/slider_fill = Color(0.135276, 0.101395, 0.442134, 1)
theme_override_colors/slider_outline = Color(0.113725, 0.027451, 0.184314, 1)
theme_override_constants/grabber_height = 20
theme_override_constants/grabber_width = 20
theme_override_constants/slider_height = 8
value = 70.0

[node name="SFXContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SFXLabel" type="Label" parent="Panel/VBoxContainer/SFXContainer"]
layout_mode = 2
text = "Efekty dźwiękowe: 70%"
custom_minimum_size = Vector2(200, 0)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.113725, 0.027451, 0.184314, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 24
vertical_alignment = 1

[node name="SFXSlider" type="HSlider" parent="Panel/VBoxContainer/SFXContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_colors/grabber_disabled = Color(0.5, 0.5, 0.5, 1)
theme_override_colors/grabber_highlight = Color(1, 1, 1, 1)
theme_override_colors/slider_fill = Color(0.135276, 0.101395, 0.442134, 1)
theme_override_colors/slider_outline = Color(0.113725, 0.027451, 0.184314, 1)
theme_override_constants/grabber_height = 20
theme_override_constants/grabber_width = 20
theme_override_constants/slider_height = 8
value = 70.0

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.202534, 0.230113, 0.290135, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0.0705882, 0.258824, 0.309804, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_focus")
theme_override_styles/disabled = SubResource("StyleBoxTexture_disabled")
theme_override_styles/hover = SubResource("StyleBoxTexture_hover")
theme_override_styles/pressed = SubResource("StyleBoxTexture_pressed")
theme_override_styles/normal = SubResource("StyleBoxTexture_normal")
text = "Powrót"
